[gd_scene load_steps=2 format=3 uid="uid://cx0gmiubte21m"]

[ext_resource type="Script" uid="uid://c1sxtggo3wyg8" path="res://UI/Shared/basic_info_panel.gd" id="1_qdky2"]

[node name="BasicInfo" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qdky2")

[node name="InfoPanel" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="InfoPanel"]
layout_mode = 2

[node name="InfoAmount" type="Label" parent="InfoPanel"]
layout_mode = 2
